--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-mongoose": "^2.2.0",
+    "egg-scripts": "^2.5.1",
+    "mz": "^2.7.0",
+    "stream-to-array": "^2.3.0",
+    "stream-wormhole": "^1.0.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -15,7 +20,8 @@
     "egg-mock": "^3.14.0",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
-    "webstorm-disable-index": "^1.2.0"
+    "webstorm-disable-index": "^1.2.0",
+    "mz-modules": "^2.0.0"
   },
   "engines": {
     "node": ">=8.9.0"
